dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/notfound/procedure/proc.alg
algoritmo "erro procedimento nao existe"

inicio

    oi()

fimalgoritmo
